force-app/main/default/objects/EPPS_Integration_Setting__mdt/EPPS_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>EPPS Integration Setting</label>
    <pluralLabel>EPPS Integration Setting</pluralLabel>
</CustomObject>