force-app/main/default/objects/EPPS_Integration_Setting__mdt/fields/Batch_Size_for_Settlement_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_for_Settlement_Fee_Status__c</fullName>
    <label>Batch Size for Settlement Fee Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>