force-app/main/default/objects/EPPS_Integration_Setting__mdt/fields/Clients_per_Find_EFT_Batch__c.field-meta.xml
<CustomField>
    <fullName>Clients_per_Find_EFT_Batch__c</fullName>
    <label>Clients per Find EFT Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>