force-app/main/default/objects/EPPS_Integration_Setting__mdt/fields/Log_Integration_Success_Records__c.field-meta.xml
<CustomField>
    <fullName>Log_Integration_Success_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Integration Success Records</label>
    <type>Checkbox</type>
</CustomField>