force-app/main/default/objects/EPPS_Integration_Setting__mdt/fields/Lookback_for_Client_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Lookback_for_Client_Payment_Status__c</fullName>
    <label>Lookback for Client Payment Status</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>