force-app/main/default/objects/EPPS_Integration_Setting__mdt/fields/Lookback_for_Payment_Fee_Batch__c.field-meta.xml
<CustomField>
    <fullName>Lookback_for_Payment_Fee_Batch__c</fullName>
    <label>Lookback for Payment Fee Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>