force-app/main/default/objects/EPPS_Integration_Setting__mdt/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>